Editing Home index page.

--- a/33_CHENGMUNLENG_WSD_PA1/Views/Home/Index.cshtml
+++ b/33_CHENGMUNLENG_WSD_PA1/Views/Home/Index.cshtml
@@ -1,13 +1,9 @@
-﻿<div class="container">
-
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
-
-    </div><!-- /.container -->
+﻿
 
 <div class="jumbotron">
-    <h1>Jumbotron heading</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <h1>Welcome to ABC Food Catering</h1>
+    <p>Our Cater serves a wide range of quality food to fit your needs and satisfactions.</p>
+    <p>Do view our website for more information.</p>
+    <p>Ordering of food please click <a href="#">here</a>. </p>
+    <img style="right" src="" alt="" />
 </div>
